<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Actividad2">

    <com.gc.materialdesign.views.ButtonRectangle
        android:onClick="btnGuardar"
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Guardar"
        />

    <com.gc.materialdesign.views.ButtonRectangle
        android:onClick="btnAbrir"
        android:id="@+id/button3"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:text="@string/abrir" />

    <ImageButton
        android:onClick="imageBut"
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imageButton"
        app:srcCompat="@drawable/ic_launcher" />

    <EditText
        android:onClick="textedit"
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <CheckBox
        android:onClick="imageBut"
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Auto" />

    <CheckBox
        android:onClick="start1"
        android:id="@+id/checkBox2"
        style="@android:style/Widget.Material.CompoundButton.Star"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <RadioButton
            android:onClick="radio1"
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton1" />

        <RadioButton
            android:onClick="radio2"
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/radiobutton2" />
    </RadioGroup>

    <ToggleButton
        android:onClick="toggle"
        android:id="@+id/toggleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toggle" />

</LinearLayout>